--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,7 +6,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.8.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -14,6 +14,10 @@ dependencies:
 
   cupertino_icons: ^0.1.3
   google_fonts: ^1.1.0
+  #GetX
+  get: ^4.6.1
+
+  shared_preferences: 0.5.7+3
 
   sqflite:
   path:
